<resources>
   <string name="app_name">Navigation App</string>
   <string name="enter_amount">Enter Amount</string>
   <string name="enter_weight">Enter your weight (in kg)</string>
   <string name="enter_height">Enter your height (in cm)</string>
   <string name="calculate_BMI">Calculate BMI</string>
   <string name="result">Your BMI is: </string>
   <string name="enter_details">Enter Details</string>
   <string name="age">Age:</string>
   <string name="age_hint">Enter your age</string>
   <string name="weight">Weight (kg):</string>
   <string name="weight_hint">Enter your weight in kilograms</string>
   <string name="height">Height (m):</string>
   <string name="height_hint">Enter your height in meters</string>
   <string name="gender">Gender:</string>
   <string name="male">Male</string>
   <string name="female">Female</string>
   <string name="calculate">Calculate</string>
   <string name="prompt_activity_level">Select activity level</string>
   <string-array name="activity_levels">
      <item value="1.2">Sedentary (little or no exercise)</item>
      <item value="1.375">Lightly active (light exercise or sports 1-3 days per week)</item>
      <item value="1.55">Moderately active (moderate exercise or sports 3-5 days per week)</item>
      <item value="1.725">Very active (hard exercise or sports 6-7 days per week)</item>
      <item value="1.9">Super active (very hard exercise or sports, physical job or training twice a day)</item>
   </string-array>
   <string name="recipe_one">Your recipe numbero uno</string>
   <string name="recipe_two">Your recipe numbero dos</string>
</resources>